--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-xmlrunner = "==1.7.7"
-docopt-ng = "==0.7.2"
-autopep8 = "==1.6.0"
+xmlrunner = "*"
+docopt-ng = "*"
+autopep8 = "*"
+pipenv = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.11"
-python_full_version = "3.11.2"
