add support for config file

--- a/Pipfile
+++ b/Pipfile
@@ -8,8 +8,10 @@ xmlrunner = "*"
 docopt-ng = "*"
 autopep8 = "*"
 pipenv = "*"
+dacite = "*"
 
 [dev-packages]
+pytest = "*"
 
 [requires]
 python_version = "3.11"
