Adapt github action to new build script

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
     "python.testing.pytestEnabled": true,
     "python.testing.unittestEnabled": false,
     "python.formatting.provider": "autopep8",
-    "cmake.configureOnOpen": false,
+    "cmake.configureOnOpen": false
 }
