--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "python.testing.pytestEnabled": true,
     "python.testing.unittestEnabled": false,
-    "python.formatting.provider": "autopep8",
-    "cmake.configureOnOpen": false
+    "python.formatting.provider": "black",
+    "cmake.configureOnOpen": false,
+    "editor.formatOnSave": true
 }
