Introduce Configurable transformation (#2)
* Add support for Tasking TriCore compiler 6.3, CFLAGS and ASFLAGS

* Switch to bootstrap and make tests running

* add support for config file

* make some fixes

* create two example projects and fix all tests

* refactor transformer to use config class

* add transformer argument for config file

* make sources dir configurable

* Call pytest

* Refactor config

* more refactoring

* WIP (the bad stuff we did)

* Adapt github action to new build script

* exit make after variables retrieval

* Magic calls of MAKESUPPORT stuff

* add test for create_cmake_project

* parse make variables dump file

* refactor variant class and generate parts.cmake

* Get rid of configparser, generate legacy part cmake

* Generate legacy cmake files

* fix the sources paths

* add subdir replacements to config

* Add path replacements support to includes

* Some refactoring, too many classes in transformer.py

* Legacy sources in src folder

* Fix: forward replacements to variant parts generator

* use paths replacement for sources

* add optional argument for the make dump file

* Skip make_dump_file when already existing

* Fix include paths

* generate empty variant config cmake

* add extra variant config cmake data

* Shorten readme.

* Simplify collect.mak

* move the file generators from transformer file

* configurable mirror directories

* Working gcc toolchain for SPL unit test framework

* mirror shall mirror as default

* Generate collect scripts to support all kind of batch hacking

* Support include paths wihout -I option

* Generate junit test report

---------

Co-authored-by: Maxiniuc, Alexandru (SD-RM) <Alexandru.Maxiniuc@marquardt.com>
Co-authored-by: cuinixam <22344617+cuinixam@users.noreply.github.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: selftests
+name: CI
 
 on:
   push:
@@ -10,17 +10,21 @@ on:
 
 jobs:
   build:
-    runs-on: windows-2019
+    name: Unit and Integration Tests
+    runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
           submodules: true
       - name: install tools and run selftests
-        run: .\build.ps1
-        shell: powershell
-      - uses: actions/upload-artifact@v2
+        run: |
+          .\build.ps1 -install
+          .\build.ps1
+        shell: pwsh
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action/composite@v2
+        if: always()
         with:
-          name: unittest-results.zip
-          retention-days: 90
-          path: "output/test-report.xml"
-          if-no-files-found: error
+          files: |
+            test/output/test-report.xml
