--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,16 @@
 # Edit at https://www.gitignore.io/?templates=visualstudiocode
 
 ### VisualStudioCode ###
-.vscode/*      # Maybe .vscode/**/* instead - see comments
+.vscode/*
 !/.vscode/launch.json
 !/.vscode/settings.json
 !/.vscode/tasks.json
 !/.vscode/extensions.json
 !/.vscode/cmake-kits.json
 !/.vscode/cmake-variants.json
+
+# Output directory of test results
+/test/output
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
@@ -19,9 +22,13 @@
 /.idea
 /output
 
-# Byte-compiled / optimized / DLL files
+# What: Python: byte-compiled / optimized / DLL files
+# Why: automatically created by Python during script execution
 __pycache__/
+/.pytest_cache
 *.py[cod]
 *$py.class
 
 properties.txt
+# bootstrap files are downloaded during installation
+/.bootstrap
